# InfoRetrieval-Hw1

./: .gitignore  CMakeLists.txt  README.md  config.cpp  tarea1.cpp  utils.cpp  utils.h
