cmake_minimum_required(VERSION 3.12)
project(retrievalT1)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED HINTS /home/lyserg-zeroz/opencv/opencv-3.4.3)
#set(SOURCE_FILES main.cpp)
set(CMAKE_CXX_STANDARD 11)
add_executable(retrievalT1 tarea1.cpp utils.h utils.cpp config.cpp)
target_include_directories(retrievalT1 PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries( retrievalT1 ${OpenCV_LIBS} )